# careagent

./: .env.example  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
scripts/: generate_synthetic_cms.py  load_cms_data.py
src/careagent/: config.py
src/careagent/agents/: anomaly.py  data_cleaner.py  reporter.py  statistical.py  summarizer.py  supervisor.py
src/careagent/api/: main.py  schemas.py
src/careagent/api/routes/: analyze.py  health.py
src/careagent/db/: models.py  queries.py  session.py
src/careagent/graph/: state.py  workflow.py
tests/integration/: test_pipeline.py
tests/unit/: test_agents_coverage.py  test_agents_week3.py  test_api_routes.py  test_api_schemas.py  test_db_models.py  test_supervisor.py
